# app_store_dashboard

./: README.md  pyproject.toml
src/: main.py
src/routes/: subscriptions.py  transactions.py
src/static/: index.html
src/templates/: base.html  subscriptions.html  transactions.html
